@@ -15,6 +15,8 @@ Revelation changelog
 
 	* use better lock icon
 
+	* added a password checker dialog
+
 2005-03-17  Erik Grinaker <erikg@codepoet.no>
 
 	* fix potential crash on quit with some pygtk versions
